--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,26 +5,17 @@
 
 // Brands
 $dgl-primary: #EF9F3C;
-$dgl-darkpuple: #313152;
-$dgl-orange: #EB893C;
-
 $dgl-purple : rgba(92,96,168,1.0);//#605CA8;
-$dgl-lightestgray: #DBE2EB;
+$dgl-blue: #00A0EA;
+$dgl-red: #E74C3C;
+$dgl-red-maroon: #FF386D;
+//$dgl-lightestgray: #DBE2EB;
 $dgl-lightergray: #B6B9BD;
 $dgl-lightgray: #EAEAEB;
 $dgl-gray: #454545;
-$dgl-grayple: darken(rgb(8,3,37), 2%);
 $dgl-darkish-gray: #363636;
 $dgl-darkgray: #2B2B2A;
 $dgl-darkergray: #262625;
-
-$dgl-accent-1: #6954E3;
-$dgl-accent-2: #FF386D;
-$dgl-action: #00A0EA;
-//$dgl-bluegray-1: #DBE2EB;
-//$dgl-bluegray-2: #;
-$dgl-btn-color : $dgl-lightergray;
-
 
 
 
