--- a/public/resources/assets/sass/app.css
+++ b/public/resources/assets/sass/app.css
@@ -1,3 +1,12 @@
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #363636;
+  margin: 1em 0;
+  padding: 0;
+}
+
 .font-primary-color {
   color: #EF9F3C;
 }
@@ -15,7 +24,7 @@
 }
 
 .font-alternate-color {
-  color: #ffa35b;
+  color: #ffb75f;
 }
 
 .back-color-primary {
@@ -54,20 +63,8 @@
   background-image: radial-gradient(circle, #9fa1cb 0%, #6d70b1 100%);
 }
 
-.back-color-accent1-grad {
-  background-image: radial-gradient(circle, #6954E3 0%, #331db4 100%);
-}
-
-.back-color-accent2-grad {
-  background-image: radial-gradient(circle, #FF386D 50%, #ff0548 100%);
-}
-
-.back-color-grayple {
-  background-color: #06021c;
-}
-
 .back-color-orange {
-  background-color: #EB893C;
+  background-color: #EF9F3C;
 }
 
 .back-color-primary-hover {
@@ -84,7 +81,7 @@
 }
 
 .back-color-orange-hover:hover {
-  background-color: #fb7913;
+  background-color: #ff9513;
 }
 
 .background-tournament {
@@ -307,7 +304,7 @@ body #moreButton {
 }
 
 body #moreButton:hover {
-  color: #EB893C;
+  color: #EF9F3C;
   text-decoration: none;
 }
 
@@ -337,7 +334,7 @@ body .team-registration input {
 }
 
 body .team-registration input:focus {
-  background-color: #313152;
+  background-color: #5c60a8;
   color: #EF9F3C;
 }
 
@@ -608,7 +605,6 @@ body .flex-container {
       -ms-flex-direction: column;
           flex-direction: column;
   max-height: 300px;
-  border-bottom: 1px solid #363636;
 }
 
 body .footer-banner-img {
