--- a/public/css/app.css
+++ b/public/css/app.css
@@ -105,6 +105,13 @@ hr {
   z-index: -2;
 }
 
+.background-teams {
+  background: radial-gradient(rgba(96, 92, 168, 0.2) 1%, #605ca8 100%), url("/storage/rainbow6.jpg");
+  background-size: cover;
+  background-position: center bottom;
+  z-index: -2;
+}
+
 .background-tournament {
   background: radial-gradient(rgba(96, 92, 168, 0.2) 1%, #605ca8 100%), url("/storage/hearthstone.jpg");
   background-size: cover;
@@ -351,6 +358,11 @@ body #moreButton {
 body #moreButton:hover {
   color: #EF9F3C;
   text-decoration: none;
+}
+
+body .team-logo-300-gray {
+  width: 100%;
+  background-color: #EAEAEB;
 }
 
 body .team-logo-300 {
@@ -686,7 +698,7 @@ body .footer p {
   font-family: "Open Sans", "Helvetica", "Arial";
 }
 
-body .flex-container {
+body #footerFlexContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
